--- a/public_static/profile.html
+++ b/public_static/profile.html
@@ -77,7 +77,7 @@
                         <a class="dropdown-item">Janamstami</a>
                         <a class="dropdown-item">Nebula</a>
                         <a class="dropdown-item">Reverberense</a>
-                        <a class="dropdown-item">other HELLO</a>
+                        <a class="dropdown-item">other HELLO there</a>
 
                     </div>
                 </li>
