--- a/public_static/profile.html
+++ b/public_static/profile.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>login portal</title>
+    <title>IIT-P CONNECT</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -16,7 +16,13 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/iitp.png">
     <style>
+        .hvr:hover{
+               opacity: 0.5;
+               background-color: #4285F4;
+
+        }
         #sidebar{
             display: block;
             position: fixed;
@@ -27,6 +33,10 @@
         }
         nav{
             margin-left: 240px;
+        }
+
+        li{
+            list-style-type:none; 
         }
     </style>
 </head>
@@ -101,19 +111,19 @@
 </nav>
 <div id="sidebar">
 
-        <div style="font-size: 30px;height: 100px;background-color: #00b0ff">IIT-P Connect</div>
+        <div style="font-size: 30px;height: 100px;background-color: #00b0ff; text-align: center;padding-top:28px;color: white; " >IIT-P Connect</div>
         <div>
-            <a class="btn btn-primary" data-toggle="collapse" href="#cont" aria-expanded="false" aria-controls="cont">
+            <a class="btn btn-primary  btn-lg btn-block " data-toggle="collapse" href="#cont" aria-expanded="false" aria-controls="cont">
             Connect
         </a>
         </div>
         <div class="collapse" id="cont">
-            <li>buy and sell</li>
-            <li>lost and found</li>
-            <li>drop a msg</li>
+           <div class="hvr " ><a class="dropdown-item"  href="#"> <li>Buy And Sell</li></a></div>
+           <div class="hvr"> <a class="dropdown-item" href="#"><li>Lost and Found</li></a></div>
+            <div class="hvr"><a class="dropdown-item" href="#"><li>Drop a Message</li></a></div>
         </div>
     <div>
-        <a class="btn btn-primary" data-toggle="collapse" href="#discipline_clubs" aria-expanded="false" aria-controls="discipline_clubs">
+        <a class="btn btn-primary btn-block  btn-lg" data-toggle="collapse" href="#discipline_clubs" aria-expanded="false" aria-controls="discipline_clubs">
             discipline clubs
         </a>
     </div>
@@ -126,7 +136,7 @@
         <li>Eclub</li>
     </div>
     <div>
-        <a class="btn btn-primary" data-toggle="collapse" href="#Sports_clubs" aria-expanded="false" aria-controls="Sports_club">
+        <a class="btn btn-primary btn-block btn-lg" data-toggle="collapse" href="#Sports_clubs" aria-expanded="false" aria-controls="Sports_club">
             discipline clubs
         </a>
     </div>
@@ -141,8 +151,8 @@
         <li>Gaming</li>
     </div>
     <div>
-        <a class="btn btn-primary" data-toggle="collapse" href="#cult_events" aria-expanded="false" aria-controls="cult_events">
-            cult Events
+        <a class="btn btn-primary btn-block btn-lg" data-toggle="collapse" href="#cult_events" aria-expanded="false" aria-controls="cult_events">
+            Cult Events
         </a>
     </div>
     <div class="collapse" id="cult_events">
